--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a href="#" class="navbar-brand"><img src="" alt="">Home</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Quem Somos</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Parceiros</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Serviços</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
 </body>
 </html>
