--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Quem Somos</a>
+                    <a href="#quemsomos" class="nav-link">Quem Somos</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Parceiros</a>
@@ -25,6 +25,18 @@
             </ul>
         </div>
     </nav>
+    <section id="quemsomos">
+        <div class="container-fluid quemsomos text-center">
+            <h3>Quem Somos</h3>
+            <img src="./assets/img/team.jpg" alt="Time de desenvolvimento" width="400" height="400" class="rounded-circle">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa doloribus ratione harum error non, nesciunt a. Dicta ratione saepe dignissimos obcaecati repellendus, minima vitae distinctio facere ipsam culpa corrupti ipsum.</p>
+        </div>
+    </section>
+    <section id="parceiros">
+        <div class="container-fluid text-center parceiros">
+            <h3>Parceiros</h3>
+        </div>
+    </section>
 
 </body>
 </html>
