--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <a href="#quemsomos" class="nav-link">Quem Somos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Parceiros</a>
+                    <a href="#parceiros" class="nav-link">Parceiros</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Serviços</a>
+                    <a href="#servicos" class="nav-link">Serviços</a>
                 </li>
             </ul>
         </div>
@@ -35,8 +35,40 @@
     <section id="parceiros">
         <div class="container-fluid text-center parceiros">
             <h3>Parceiros</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="./assets/img/site01.jpg" alt="Parceiro 1" width="200" height="200" class="rounded-circle">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="./assets/img/site02.jpg" alt="Parceiro 2" width="200" height="200" class="rounded-circle">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="./assets/img/site03.jpg" alt="Parceiro 3" width="200" height="200" class="rounded-circle">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <section id="servicos">
+        <div class="container-fluid text-center servicos">
+            <h3>Serviços</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa perferendis commodi sequi aperiam nam asperiores eaque facere vero, voluptas excepturi veniam labore quaerat blanditiis incidunt at aspernatur, ipsum recusandae quos.</p>
+                        <img src="./assets/img/app.jpg" alt="App" width="200" height="200" class="rounded-circle">
+                    </div>
+                    <div class="col-lg-6">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et quidem ducimus tempora. Nemo quia quod eius, expedita beatae repudiandae exercitationem! Cum corrupti vitae odit a doloremque inventore iusto deserunt placeat.</p>
+                        <img src="./assets/img/site01.jpg" alt="Site1" width="200" height="200" class="rounded-circle">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <footer class="container-fluid text-center bg-footer">Desenvolvido com 💜 por Lucas P.</footer>
 
 </body>
 </html>
