--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
             </div>
         </div>
     </section>
+    <dl>
+        <dt>Chia</dt><dd>Rico em proteína.</dd>
+        <dt>Batata</dt><dd>Rico em carboidratos.</dd>
+        <dt>Linhaça</dt><dd>Rico em ômega-3.</dd>
+        </dl>
+
+
+
     <footer class="container-fluid text-center bg-footer">Desenvolvido com 💜 por Lucas P.</footer>
 
 </body>
